# fastapi-project

./: Dockerfile  Procfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 62a8d1a46470_add_user_table.py  acb4a8b54924_add_owner_id_column_to_post_table.py  b56551462a90_add_last_few_column_to_post_table.py  bb6d7e1edc32_auto_vote.py  ca30171d74a8_add_content_column_to_post_table.py  ed1da3e2645b_create_post_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
